:bug: :lipstick: Fix bug where pagination was not centered

--- a/src/modules/inspect/process-list/process-list.scss
+++ b/src/modules/inspect/process-list/process-list.scss
@@ -4,7 +4,7 @@
 }
 
 .pagination {
-  text-align: center;
+  justify-content: center;
 }
 
 .loading-spinner {
